WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57197
Incomplete repaint of overflow in flipped lines writing modes
https://bugs.webkit.org/show_bug.cgi?id=57197
Summary
Incomplete repaint of overflow in flipped lines writing modes
mitz
Reported
2011-03-27 17:44:13 PDT
Incomplete repaint of overflow in flipped lines writing modes
Attachments
Flip the overflow rect before checking for intersection with the damage rect
(39.07 KB, patch)
2011-03-27 17:58 PDT
,
mitz
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-03-27 17:45:07 PDT
<
rdar://problem/9003382
>
mitz
Comment 2
2011-03-27 17:58:12 PDT
Created
attachment 87093
[details]
Flip the overflow rect before checking for intersection with the damage rect
Maciej Stachowiak
Comment 3
2011-03-28 03:17:19 PDT
Comment on
attachment 87093
[details]
Flip the overflow rect before checking for intersection with the damage rect r=me
mitz
Comment 4
2011-03-28 09:17:48 PDT
Fixed in
r82123
. <
http://trac.webkit.org/changeset/82123
>
WebKit Review Bot
Comment 5
2011-03-28 11:24:56 PDT
http://trac.webkit.org/changeset/82123
might have broken SnowLeopard Intel Release (Tests) The following tests are not passing: inspector/styles/styles-add-blank-property.html
Adam Barth
Comment 6
2011-03-28 13:09:49 PDT
Seems likely this patch caused this test to fail. Maybe the test just needs a new expected result?
mitz
Comment 7
2011-03-28 13:14:05 PDT
(In reply to
comment #6
)
> Seems likely this patch caused this test to fail.
I fail to see how that’s likely, but I don’t understand inspector tests.
> Maybe the test just needs a new expected result?
Without understanding the failure, I can’t say for sure.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug