<rdar://problem/9003382> Incomplete repaint of overflow in flipped lines writing modes https://bugs.webkit.org/show_bug.cgi?id=57197

Reviewed by Maciej Stachowiak.

Source/WebCore:

Tests: fast/repaint/overflow-flipped-writing-mode-block.html
       fast/repaint/overflow-flipped-writing-mode-table.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::paint): Flip the overflow rect before testing for intersection
with the damage rect.
* rendering/RenderTable.cpp:
(WebCore::RenderTable::paint): Made the intersection check more like the one in
RenderBlock::paint().

LayoutTests:

* fast/repaint/overflow-flipped-writing-mode-block-expected.checksum: Added.
* fast/repaint/overflow-flipped-writing-mode-block-expected.png: Added.
* fast/repaint/overflow-flipped-writing-mode-block-expected.txt: Added.
* fast/repaint/overflow-flipped-writing-mode-block.html: Added.
* fast/repaint/overflow-flipped-writing-mode-table-expected.checksum: Added.
* fast/repaint/overflow-flipped-writing-mode-table-expected.png: Added.
* fast/repaint/overflow-flipped-writing-mode-table-expected.txt: Added.
* fast/repaint/overflow-flipped-writing-mode-table.html: Added.



Canonical link: https://commits.webkit.org/71925@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82123 268f45cc-cd09-0410-ab3c-d52691b4dbfc